# SecureBank

./: CMakeLists.txt  README.md
client/: client  client.c  client.h  client_protocol.h
client/registered/squarcia/: squarcia
server/: ds.c  ds.h  server.c  server.h  server_protocol.h
